2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Implementing module's properties.
	* PropertyPageMessages.properties
	* ModuleProperties.java (former ModuleProperties.java)
	* ModulePropertyPage.java

2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Implementing module's properties.
	* PropertyPageMessages.properties
	* CModuleProperties.java
	* ModulePropertyPage.java

2005-02-11 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Implementing module's properties.
	* CDebugModelPresentation.java
	* CDebugUIMessages.properties
	* ModulesPropertiesActionDelegate.java: new
	* CModuleProperties.java: new
	* ModulePropertyPage.java: new
	* ModulesMessages.properties
	* ModulesView.java
	* plugin.xml
	* plugin.properties

2005-02-08 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Improved detail information.
	Save the viewer state.
	* AbstractViewerState.java: new
	* ModulesMessages.properties
	* ModulesView.java
	* ModulesViewerState.java: new
	* plugin.xml

2005-02-07 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Added the definition of detail pane font.
	* IInternalCDebugUIConstants.java
	* ModulesView.java
	* plugin.xml
	* plugin.properties

2005-02-07 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	* CDebugUIMessages.properties
	* CDebugImages.java
	* CDebugModelPresentation.java
	* CDTDebugModelPresentation.java: removed
	* ICDebugHelpContextIds.java
	* ActionMessages.properties
	* CollapseAllModulesAction.java: new
	* ToggleDetailPaneAction.java: new
	* ICDebugPreferenceConstants.java
	* DebugViewDecoratingLabelProvider.java: new
	* DebugViewInterimLabelProvider.java: new
	* DebugViewLabelDecorator.java: new
	* org.eclipse.cdt.debug.internal.ui.views.modules: new package
	* ModulesMessages.properties: new
	* ModulesMessages.java: new
	* ModulesView.java: new
	* ModulesViewContentProvider.java: new
	* ModulesViewer.java: new