@@ -125,5 +125,5 @@ ModulesDetailPaneFontDefinition.description=The text font used in the detail pan
 CollapseAllModulesAction.label=Collapse All
 CollapseAllModulesAction.tooltip=Collapse All
 
-ModulePropertiesAction.label=Module Properties...
+ModulePropertiesAction.label=Properties...
 ModulePropertiesAction.tooltip=Open Module Properties Dialog
