@@ -17,6 +17,7 @@ LoadSymbolsForAllActionDelegate.Error(s)_occurred_loading_the_symbols_1=Error(s)
 LoadSymbolsForAllAction.Load_Symbols_For_All_2=Load Symbols For All
 LoadSymbolsForAllActionDelegate.Error_1=Error
 LoadSymbolsForAllActionDelegate.0=Operation failed.
+LoadModuleSymbolsActionDelegate.0=Unable to load symbols.
 LoadSymbolsForAllAction.Unable_to_load_symbols_1=Unable to load symbols.
 SignalZeroWorkbenchActionDelegate.0=Exceptions occurred attempting to resume without signal.
 SignalZeroWorkbenchActionDelegate.1=Resume without signal failed.
